--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
+
 .container{
     display: grid;
     grid-template-columns: 0.5fr 3fr;
@@ -16,15 +17,26 @@
 }
 
 .side-bar{
-    border: 1px solid black;
-    grid-row: 2/3;
+    grid-row: 1/3;
     grid-column: 1/2;
+    background-color: #115e59;
+    /* add a shadow to right side */
+    box-shadow: 0 0 10px rgba(0,0,0,2);
+    overflow: hidden;
+    height: 100%;
+
+    
+    
 }
 
 header{
     grid-column: 2/3;
     display: grid;
     grid-template-rows: 1fr 1fr; 
+    box-shadow: 0 0 40px rgba(0,0,0,2);
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    
 }
 header>.titles{
 
@@ -32,6 +44,7 @@ header>.titles{
     justify-content: center;
     align-items: center;
     flex-direction: row;
+
 }
 header>.titles>.search{
     display: flex;
@@ -42,7 +55,6 @@ header>.titles>.search{
     border-radius: 15px;
     margin: 10px;
     background-color: white;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
     width: 50%;
 
 }
@@ -50,6 +62,7 @@ header>.titles>.search{
 header>nav{
     display: grid;
     grid-template-columns: 1fr 1fr;
+
 }
 
 nav>ul>li{
@@ -58,6 +71,12 @@ nav>ul>li{
     padding: 1rem;
     list-style: none;
     margin: 10px;
+}
+
+.side-bar >.list-2>ul>li:hover{
+    background-color: #f1f1f1;
+    cursor: pointer;
+    transform: scale(1.03);
 }
 
 header>nav>.logo{
@@ -87,6 +106,13 @@ header>nav>ul{
     border: 1px solid black;
     border-radius: 10px;
     margin: 10px;
+    border-left: 5px solid rgb(0, 0, 0);
+    padding: 7px;
+}
+.side-bar >.list-1>ul>li:hover{
+    background-color: #f1f1f1;
+    cursor: pointer;
+    transform: scale(1.03);
 }
 
 .side-bar >.list-2>ul>li{
@@ -97,19 +123,19 @@ header>nav>ul{
     border: 1px solid black;
     border-radius: 10px;
     margin: 10px;
+        border-left: 5px solid rgb(0, 0, 0);
+    padding: 7px;
 }
 
 main{
 
-    border: 1px solid black;
     grid-column: 2/3;
-
-
     display: grid;
     /* use auto fit */
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-template-rows: 2fr 1fr;
     grid-gap: 10px;
+
 }
 
 main>.card{
@@ -119,27 +145,38 @@ main>.card{
     border: 1px solid black;
     height: 40;
 
+        /* add a color line to left */
+        border-left: 7px solid #115e59;
+        padding: 10px;
+        overflow: hidden;
+        height: 100%;
+
 }
 
 .graph{
-    grid-column: 1/4;
-    grid-row: 1/3;
+    grid-column: 1/3;
+    grid-row: 1/2;
     border: 1px solid black;
     overflow: hidden;
-    height: 50vh;
+    height: 100%;
+    background-image: url(./1.png);
+    background-size:700px 400px ;
 }
 
+.list-1{
+    margin-top: 30%;
+}
 
 .list-1 li{
-    
+
     transition: all 0.3s ease-in-out;
 
 }
 
 .list-1 li:hover{
+    
     background-color: #f1f1f1;
     cursor: pointer;
-    transform: scale(1.1);
 }
 
 .list-2 li{
@@ -155,14 +192,27 @@ main>.card{
 }
 
 .button>li{
-
+    color: white;
+    box-shadow: 0 0 10px rgba(0,0,0,2);
+    background-color: #115e59;
     transition: all 0.3s ease-in-out;
 }
 
 .button>li:hover{
-    background-color: #f1f1f1;
     cursor: pointer;
     transform: scale(1.1);
 }
+
+.logo01{
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    gap: 10px;
+}
+
 
 
